# sage

./: .dockerignore  .env.e2e.example  .env.example  .gitignore  .gitleaksignore  .golangci.yml  .gosec.json  ALGORITHM_REGISTRY_REFACTORING.md  CHANGELOG.md  CHANGELOG_v1.5.0.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  Makefile  NOTICE  README.md  TESTING_GUIDE.md  codecov.yml  docker-compose.yml  feature_list.docx  go.mod  go.sum  hardhat.config.js  package-lock.json  package.json  run_tests.sh  sage-config.example.yaml  test-report.html  test_phase1.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance.yml
.github/codeql/: codeql-config.yml
.github/scripts/: fix-sarif-paths.py
.github/workflows/: docker.yml  integration-test.yml  loadtest.yml  release.yml  security.yml  test.yml
api/: README.md  openapi.yaml
api/examples/: authentication.md  sessions.md  signatures.md
benchmark/: comparison_bench_test.go  crypto_bench_test.go  session_bench_test.go
benchmark/results/: benchmark_20251008_163810.txt
benchmark/tools/: analyze.go  parse.go
cmd/deployment-verify/: main.go
cmd/metrics-demo/: main.go
cmd/random-test/: main.go
cmd/sage-crypto/: address.go  generate.go  list.go  main.go  rotate.go  sign.go  verify.go
cmd/sage-did/: activate.go  card.go  commit.go  deactivate.go  debug.go  helpers.go  key.go  list.go  main.go  register.go  register_test.go  resolve.go  update.go  verify.go
cmd/sage-verify/: main.go
cmd/test-client/: main.go
cmd/test-server/: main.go
cmd/test-sever/: main.go
config/: additional_test.go  blockchain.go  config.go  config_test.go  deployment_loader.go  env.go  env_test.go  loader.go  loader_test.go  production.yaml  types.go  validator.go
contracts/: CONTRACTS_INDEX.md  CONTRACT_LICENSE_ANALYSIS.md  DEPLOYED_ADDRESSES.md  DEPLOYMENT_GUIDE.md  MULTI_KEY_DESIGN.md  README.md  ROADMAP.md  STATUS.md  TODO.md
contracts/archived/: LOCAL_CONTRACT_INFO.md  SECURITY_AUDIT_LEGACY.md
contracts/deprecated-tests-temp/: README.md  SageRegistry.test.js  array-bounds-standalone.test.js  erc8004-standalone.test.js  integration-v1.test.js  multisig-governance.test.js  security-features.test.js  security-reentrancy.test.js
contracts/ethereum/: .env.example  .env.governance.example  .gitignore  .slither.config.json  .slither.config.md  .solcover.js  .solhint.json  CLEAN_GUIDE.md  DEPLOYMENT_GUIDE_V4.md  ERC8004_COMPLIANCE_GAP_ANALYSIS.md  FINAL_ARCHITECTURE_DESIGN.md  IMPLEMENTATION_PLAN.md  (+10 more)
contracts/ethereum/bindings/rust/: Cargo.toml  README.md  build.rs
contracts/ethereum/bindings/rust/examples/: client.rs
contracts/solana/: Cargo.toml  LICENSE
contracts/solana/programs/sage-registry/: Cargo.toml
contracts/solana/programs/sage-registry/src/: lib.rs
contracts/solana/programs/sage-registry/tests/: registry_tests.rs
contracts/solana/programs/sage-verification-hook/: Cargo.toml
contracts/solana/programs/sage-verification-hook/src/: lib.rs
contracts/solana/programs/sage-verification-hook/tests/: hook_tests.rs
contracts/solana/scripts/: deploy.sh
core/: additional_test.go  core.go  core_config_test.go  core_test.go  verification_service.go  verification_service_test.go
crypto/: algorithm_registry.go  algorithm_registry_test.go  crypto.go  fuzz_test.go  manager.go  manager_test.go  pubkey_validation_test.go  types.go  wrappers.go  wrappers_test.go
deployments/: README.md
did/: client.go  did.go  did_test.go  factory.go  factory_test.go  manager.go  manager_additional_test.go  manager_registration_test.go  manager_test.go  registry.go  registry_test.go  resolver.go  resolver_test.go  types.go  types_test.go  utils.go  verification.go  verification_test.go
docs/: AGENTCARD_MIGRATION_GUIDE.md  API.md  ARCHITECTURE.md  ARCHITECTURE_PROPOSAL_STATUS.md  ARCHITECTURE_REFACTORING_PROPOSAL.md  BUG_REPORT.md  BUILD.md  BUILD_TAGS_SUCCESS.md  CI-CD.md  CODE_REVIEW_CHECKLIST.md  CODING_GUIDELINES.md  CONFIGURATION-IMPLEMENTATION-REPORT.md  CONFIGURATION-MANAGEMENT.md  DATABASE.md  DEPENDENCY_REMOVAL_PLAN.md  DETAILED_GUIDE_PART1_KO.md  DETAILED_GUIDE_PART2_KO.md  DETAILED_GUIDE_PART3_KO.md  DETAILED_GUIDE_PART4_KO.md  DETAILED_GUIDE_PART5_KO.md  DETAILED_GUIDE_PART6A_KO.md  DETAILED_GUIDE_PART6B_KO.md  DETAILED_GUIDE_PART6C_KO.md  ERC-8004-Analysis.md  EXAMPLES_MIGRATION_PLAN.md  FEATURE_TEST_GUIDE_KR.md  FEATURE_VERIFICATION_GUIDE.md  FEATURE_VERIFICATION_REPORT.md  FINAL_SESSION_COMPLETE_2025-01-11.md  FINAL_SUMMARY_KO.md  FIX-SUMMARY.md  FUZZING.md  GO_VERSION_REQUIREMENT.md  IMPLEMENTATION-VERIFICATION-REPORT.md  IMPLEMENTATION-VERIFICATION.md  IMPLEMENTATION_STATUS.md  INDEX.md  KME_PUBLIC_KEY_INTEGRATION.md  LOAD-TESTING.md  MAKEFILE_VERIFICATION_REPORT.md  (+44 more)
examples/: README.md  config.yaml  health_server.go  run-examples.sh
handshake/: client.go  handshake_test.go  helper_test.go  server.go  server_test.go  types.go  utils.go
health/: checker.go  checker_test.go  server.go
hpke/: client.go  common.go  hpke_test.go  server.go  server_test.go  types.go
internal/: session_creator.go
lib/: export.go
oidc/: provider.go  types.go
registry/: client.go  client_test.go  ethereum_client.go  ethereum_client_test.go
reports/: random-test-20250930-004457.json
scripts/: docker-run.sh  full-test.sh
sdk/python/: README.md  pyproject.toml  requirements.txt
sdk/python/examples/: basic_usage.py
sdk/python/sage_client/: __init__.py  client.py  crypto.py  did.py  exceptions.py  session.py  types.py
sdk/python/tests/: test_crypto.py
sdk/rust/sage-client/: Cargo.toml  README.md
sdk/rust/sage-client/examples/: basic_usage.rs
sdk/rust/sage-client/src/: client.rs  crypto.rs  did.rs  error.rs  lib.rs  session.rs  types.rs
session/: fuzz_test.go  manager.go  manager_test.go  metadata.go  metadata_test.go  nonce.go  session.go  session_test.go  types.go
tests/: blockchain_verification_test.go  cli_integration_test.sh  test-secp256k1-public.jwk  test-secp256k1.jwk  verify_healthcheck.sh
(+992 files in other folders)
