[workspace]
members = [
    "programs/sage-registry",
    "programs/sage-verification-hook",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["SAGE-X-project"]
repository = "https://github.com/SAGE-X-project/sage"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
