[package]
name = "sage-contracts"
version = "1.0.0"
edition = "2021"
authors = ["SAGE Team"]
description = "Rust bindings for SAGE smart contracts"
license = "MIT"
repository = "https://github.com/sage-x-project/sage"

[dependencies]
ethers = { version = "2.0", features = ["abigen", "ws", "rustls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
anyhow = "1.0"
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["mainnet"]
mainnet = []
testnet = []

[[example]]
name = "client"
path = "examples/client.rs"
