[package]
name = "sage-registry"
version = "0.1.0"
description = "SAGE AI Agent Registry for Solana"
edition = "2021"
license = "MIT"
authors = ["SAGE-X-project"]
repository = "https://github.com/SAGE-X-project/sage"

[lib]
crate-type = ["cdylib", "lib"]
name = "sage_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
