[package]
name = "sage-verification-hook"
version = "0.1.0"
description = "Verification hook for SAGE Registry"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sage_verification_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"