[package]
name = "sage-verification-hook"
version = "0.1.0"
description = "Verification hook for SAGE Registry"
edition = "2021"
license = "MIT"
authors = ["SAGE-X-project"]
repository = "https://github.com/SAGE-X-project/sage"

[lib]
crate-type = ["cdylib", "lib"]
name = "sage_verification_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
ed25519-dalek = { version = "2.0", default-features = false }
sha2 = "0.10"

[dev-dependencies]
rand = "0.8"
rand_core = "0.6"